syntax = "proto3";

package ws;

service ws {
  rpc GetOrderInfo(GetOrderRequest) returns (stream GetOrderResponse) {}
}

message GetOrderRequest {
  string instId = 1;
}

message GetOrderResponse {
  bytes replybody = 1;
}